--- a/components/rentals/rental_edit.jade
+++ b/components/rentals/rental_edit.jade
@@ -1,5 +1,4 @@
-template(name='rental_edit_layout')
-    +nav
+template(name='rental_edit')
     with current_doc
         .ui.stackable.padded.grid
             .row
@@ -14,97 +13,46 @@ template(name='rental_edit_layout')
                         |save
                     +remove_button
                     +text_edit key='_author_username' label='author username' direct=true
-                .twelve.wide.column 
-                    a.ui.compact.button(href="/rental/#{_id}/edit/info" class="{{isActiveRoute 'rental_edit_info'}}")
-                        +ismall name='info'
-                        |info
-                    a.ui.compact.button(href="/rental/#{_id}/edit/finance" class="{{isActiveRoute 'rental_edit_finance'}}")
-                        +ismall name='money'
+                .six.wide.column 
+                    +text_edit key='title' direct=true
+                    +image_edit key='image' label='image' direct=true
+                    +textarea_edit key='description' label='content' icon='content' direct=true
+                    +array_edit key='tags' label='tags' icon='tags' direct=true
+                    +array_edit key='location_tags' label='location tags' icon='marker' direct=true
+                    +single_user_edit key='resident' label='resident' direct=true
+                    +text_edit key='contact_info' label='contact info' icon='info' direct=true
+                    +link_edit key='amazon_referral_link' label='amazon referral link' icon='amazon' direct=true
+                    .ui.large.header 
+                        +i name='money'
                         |finance
-                    a.ui.compact.button(href="/rental/#{_id}/edit/availability" class="{{isActiveRoute 'rental_edit_availability'}}")
-                        +ismall name='clock'
-                        |availability
-                    a.ui.compact.button(href="/rental/#{_id}/edit/audience" class="{{isActiveRoute 'rental_edit_audience'}}") 
-                        +ismall name='groups'
-                        |audience
-                    +yield
-                    
-                    
-                    
-template(name='rental_edit_info')      
-    +text_edit key='title' direct=true
-    +image_edit key='image' label='image' direct=true
-    +textarea_edit key='description' label='content' icon='content' direct=true
-    +array_edit key='tags' label='tags' icon='tags' direct=true
-    +array_edit key='location_tags' label='location tags' icon='marker' direct=true
-    +single_user_edit key='resident' label='resident' direct=true
-    +text_edit key='contact_info' label='contact info' icon='info' direct=true
-    +link_edit key='amazon_referral_link' label='amazon referral link' icon='amazon' direct=true
-
-
-template(name='rental_edit_finance')  
-    .ui.large.header 
-        +i name='money'
-        |finance
-    +number_edit key='hourly_dollars' label='hourly rate ($)' icon='money' direct=true
-    //- +number_edit key='daily_dollars' label='daily rate ($)' icon='money' direct=true
-    //- +number_edit key='monthly_dollars' label='monthly rate ($)' icon='money' direct=true
-    //- .column
-    //-     +number_edit key='hourly_karma' label='hourly rate (karma)' icon='yin-yang' direct=true
-    //-     +number_edit key='daily_karma' label='daily rate (karma)' icon='yin-yang' direct=true
-    div
-    //- +boolean_edit key='variable_price' label='variable price' icon='change' direct=true tooltip='allow system to increase/decrease price based on performance and popularity'
-    //- if variable_price
-    //-     +number_edit key='min_variable_price' label='minimum variable price' icon='online-request' tooltip='baseline price' direct=true
-    //- div
-    //- +boolean_edit key='negotiable_price' label='negotiable price' icon='collaboration' tooltip='allow people to make bids' direct=true
-    //- div
-    +number_edit key='retail_value' label='original retail value' icon='estimate' tooltip='general info, helpful to renters to decide, also for price recommendations, and sorting' direct=true
-    .ui.header 
-        +i name='online-payment-'
-        |payment options
-    +boolean_edit key='cash_accepted' label='cash accepted' icon='cash' direct=true
-    +boolean_edit key='venmo_accepted' label='venmo accepted' icon='venmo' direct=true
-    +boolean_edit key='prepay' label='prepayment required' icon='pay-wall' direct=true
-    +boolean_edit key='security_deposit_required' label='security deposit required' icon='card-security' direct=true
-    if security_deposit_required
-        +number_edit key='security_deposit_amount' label='security deposit amount' icon='card-security' direct=true
-    div
-    +boolean_edit key='friend_discount' label='friend discount' icon='friends--v2' direct=true
-    if friend_discount
-        +number_edit key='friend_discount_amount' label='friend discount amount' icon='friends--v2' direct=true
-
-            
-                  
-template(name='rental_edit_audience')
-    h1.ui.header 
-        +i name='groups'
-        |audience
-    .ui.header visibility
-    +boolean_edit key='visible_to_friends' label='friends' direct=true
-    +boolean_edit key='visible_to_building' label='building' direct=true
-    +boolean_edit key='visible_to_residents' label='residents' direct=true
-    +boolean_edit key='visible_to_public' label='public' direct=true
-    +boolean_edit key='allowed_specific_users' label='allowed specific users' direct=true
-    if allowed_specific_users
-        +multi_user_edit key='allowed_users' direct=true
-    
-    
-    
-    
-template(name='rental_edit_availability')  
-    +array_edit key='availability_tags' label='availability tags' icon='clock' direct=true
-    div
-    +boolean_edit key='available' label='currently available' direct=true
-    div
-    +multi_doc_edit key='available_days' label='available days' ref_model='day_of_week' direct=true
-    .ui.header
-        +i name='delivery' classes='ui inline tiny image'
-        |delivery
-    +boolean_edit key='pickup' label='pickup' icon='order-delivered' direct=true
-    +boolean_edit key='dropoff' label='dropoff' icon='move-by-trolley' direct=true
-    if dropoff
-        +number_edit key='dropoff_fee' label='dropoff fee' icon='low-price' direct=true
-    .ui.header
-        | visibility
-    +boolean_edit key='published' label='published' direct=true
+                    +number_edit key='hourly_dollars' label='hourly rate ($)' icon='money' direct=true
+                    +number_edit key='daily_dollars' label='daily rate ($)' icon='money' direct=true
+                    div
+                .six.wide.column 
+                    //- +number_edit key='retail_value' label='original retail value' icon='estimate' tooltip='general info, helpful to renters to decide, also for price recommendations, and sorting' direct=true
+                    //- +boolean_edit key='security_deposit_required' label='security deposit required' icon='card-security' direct=true
+                    //- if security_deposit_required
+                    //-     +number_edit key='security_deposit_amount' label='security deposit amount' icon='card-security' direct=true
+                    //- div
+                    //- +boolean_edit key='friend_discount' label='friend discount' icon='friends--v2' direct=true
+                    //- if friend_discount
+                    //-     +number_edit key='friend_discount_amount' label='friend discount amount' icon='friends--v2' direct=true
+                    +array_edit key='availability_tags' label='availability tags' icon='clock' direct=true
+                    div
+                    +boolean_edit key='available' label='currently available' direct=true
+                    div
+                    +multi_doc_edit key='available_days' label='available days' ref_model='day_of_week' direct=true
+                    .ui.header
+                        +i name='clock' classes='ui inline tiny image'
+                        |reservation start
+                    +boolean_edit key='res_start_pickup' label='pickup' icon='order-delivered' direct=true
+                    +boolean_edit key='res_start_dropoff' label='dropoff' icon='move-by-trolley' direct=true
+                    if res_start_dropoff
+                        +number_edit key='res_start_dropoff_fee' label='reservation start dropoff fee' icon='low-price' direct=true
+                    .ui.header
+                        +i name='clock' classes='ui inline tiny image'
+                        |reservation end
+                    +boolean_edit key='res_end_dropoff' label='dropoff' icon='move-by-trolley' direct=true
+                    +boolean_edit key='res_end_pickup' label='pickup' icon='order-delivered' direct=true
+                    if res_end_pickup
+                        +number_edit key='res_end_pickup_fee' label='reservation end pickup fee' icon='low-price' direct=true
