--- a/components/rentals/rental_view.jade
+++ b/components/rentals/rental_view.jade
@@ -1,22 +1,20 @@
-template(name='rental_view_layout')
-    +nav
+template(name='rental_view')
     with current_doc
         .ui.stackable.padded.grid
             //- img.ui.large.rounded.image(src="{{c.url image width=500 height=500 gravity='face' crop='fill'}}")
-            .row
-                .six.wide.column
+            .three.column.row
+                .column
                     a.ui.fluid.button(href='/m/rental' class="{{isActivePath '/m/rental'}}" title='rentals')
                         i.left.chevron.icon
                         +i name='handshake' classes='ui mini inline image'
                         |rentals
                     .ui.large.center.aligned.header #{title}
-                    img.ui.centered.rounded.small.image(src="{{c.url image width=400 height=400 crop='fit'}}")
+                    img.ui.centered.rounded.medium.image(src="{{c.url image width=400 height=400 crop='fit'}}")
                     if can_edit
                         a.ui.fluid.button(href="/rental/#{_id}/edit")
                             i.blue.pencil.icon
                             |edit
                     +rental_status
-                    +reserve_button
 
                     .ui.header added by #{_author_username}
                     |#{when}
@@ -25,146 +23,60 @@ template(name='rental_view_layout')
                     +array_view key='tags' icon='tags' direct=true title='tags'
                     +array_view key='location_tags' icon='marker' direct=true title='location tags'
                     //- +text_view key='location' icon='marker' label='location description' direct=true
-
-                    +number_view key='inventory' label='inventory' icon='move-by-trolley' direct=true
-                    //- +dollar_price_view key='dollar_price' icon='money' label='dollar price' direct=true
-                    if date_available
-                        +date_view key='date_available' label='date available' icon='calendar' direct=true
-                    if time_available
-                        +time_view key='time_available' label='time available' icon='clock' direct=true
-                    .ui.header 
-                        |reviews
-                .ten.wide.column
-                    a.ui.compact.button(href="/rental/#{_id}/view" class="{{isActiveRoute 'rental_view_info'}}")
-                        +ismall name='info'
-                        |info
-                    a.ui.compact.button(href="/rental/#{_id}/audience" class="{{isActiveRoute 'rental_view_audience'}}")
-                        +ismall name='invoice'
-                        |audience
-                    a.ui.compact.button(href="/rental/#{_id}/reservations" class="{{isActiveRoute 'rental_view_reservations'}}")
-                        +ismall name='clock'
-                        |reservations
-                    a.ui.compact.button(href="/rental/#{_id}/chat" class="{{isActiveRoute 'rental_view_chat'}}")
-                        +ismall name='chat'
-                        |chat
-                    //- a.ui.compact.button(href="/rental/#{_id}/calendar" class="{{isActiveRoute 'rental_view_calendar'}}")
-                    //-     +ismall name='calendar'
-                    //-     |calendar
-                    a.ui.compact.button(href="/rental/#{_id}/finance" class="{{isActiveRoute 'rental_view_finance'}}")
-                        +ismall name='money'
-                        |finance
-                    a.ui.compact.button(href="/rental/#{_id}/stats" class="{{isActiveRoute 'rental_view_stats'}}")
-                        +ismall name='line-chart'
-                        |stats
                     div
-                    +yield
+                    .ui.header 
+                        |retail $
+                        |#{retail_value}
+                    //- +boolean_view key='security_deposit_required' label='security deposit required' icon='card-security' direct=true
+                    //- if security_deposit_required
+                    //-     +number_view key='security_deposit_amount' label='security deposit amount' icon='card-security' direct=true
+                .column
+                    .ui.inline.header 
+                        |$#{hourly_dollars}
+                        small /hr
+                    .ui.inline.header 
+                        |$#{daily_dollars}
+                        small /day
+                    .ui.header 
+                        +i name='sell-property'
+                        small owner
+                        |#{owner_username}
+                    .ui.header 
+                        +i name='manager'
+                        small manager
+                        |#{owner_username}
+                    +html_view key='description' label='content' icon='content' direct=true
+                    +array_view key='location_tags' label='location tags' icon='marker' direct=true
+                    div
+                    +single_user_view key='resident' label='resident' direct=true
+                    div 
+                    +text_view key='contact_info' label='contact info' icon='info' direct=true
+                    +link_view key='amazon_referral_link' label='amazon referral link' icon='amazon' direct=true
+                    .ui.inline.header 
+                        +i name='line-chart'
+                        |stats
+                    i.circular.link.refresh.icon.refresh_rental_finance_stats
+                    .ui.header #{views} views
+                    .ui.small.header total earnings
+                    .ui.small.header rental ranking #reservations
+                    .ui.small.header rental ranking $ earned
+                    .ui.small.header # different renters
+                    .ui.small.header avg rental time
+                    .ui.small.header avg daily earnings
+                    .ui.small.header avg weekly earnings
+                    .ui.small.header avg monthly earnings
+                    .ui.small.header biggest renter
+                    .ui.small.header predicted payback duration 
+                    .ui.small.header predicted payback date 
+                .column
+                    +reserve_button
+                    +rental_view_reservations
+                    +comments
+                    
     +footer
 
 
-template(name='rental_view_info')  
-    with current_doc 
-        h1.ui.header 
-            //- i.info.icon
-            +i name='info'
-            |info
-        //- h1.ui.header #{title}
-        +image_view key='image' label='image' direct=true
-        +html_view key='description' label='content' icon='content' direct=true
-        +array_view key='tags' label='tags' icon='tags' direct=true
-        +array_view key='location_tags' label='location tags' icon='marker' direct=true
-        div
-        +single_user_view key='resident' label='resident' direct=true
-        div 
-        +text_view key='contact_info' label='contact info' icon='info' direct=true
-        +link_view key='amazon_referral_link' label='amazon referral link' icon='amazon' direct=true
-
-
-            
-                  
-template(name='rental_view_audience')
-    h1.ui.header 
-        +i name='groups'
-        |audience
-    .ui.header visibility
-    +boolean_view key='visible_to_friends' label='friends' direct=true
-    +boolean_view key='visible_to_building' label='building' direct=true
-    +boolean_view key='visible_to_residents' label='residents' direct=true
-    +boolean_view key='visible_to_public' label='public' direct=true
-
     
-    
-    
-template(name='rental_view_chat')
-    +comments
-    
-    
-    
-    
-    
-template(name='rental_view_stats')
-    h1.ui.header 
-        +i name='line-chart'
-        |stats
-    i.circular.link.refresh.icon.refresh_rental_finance_stats
-    .ui.header #{views} views
-    .ui.small.header total earnings
-    .ui.small.header rental ranking #reservations
-    .ui.small.header rental ranking $ earned
-    .ui.small.header # different renters
-    .ui.small.header avg rental time
-    .ui.small.header avg daily earnings
-    .ui.small.header avg weekly earnings
-    .ui.small.header avg monthly earnings
-    .ui.small.header biggest renter
-    .ui.small.header predicted payback duration 
-    .ui.small.header predicted payback date 
-    
-
-
-
-template(name='rental_view_finance')
-    .ui.inline.large.header 
-        +i name='money'
-        |rental finance
-    i.circular.link.refresh.icon.refresh_rental_finance_stats
-    .ui.stackable.grid
-        .column
-            +number_view key='hourly_dollars' label='hourly rate ($)' icon='money' direct=true
-            +number_view key='daily_dollars' label='daily rate ($)' icon='money' direct=true
-        //- .column
-        //-     +number_view key='hourly_karma' label='hourly rate (karma)' icon='yin-yang' direct=true
-        //-     +number_view key='daily_karma' label='daily rate (karma)' icon='yin-yang' direct=true
-    div
-    +boolean_view key='variable_price' label='variable price' icon='change' direct=true tooltip='allow system to increase/decrease price based on performance and popularity'
-    if variable_price
-        +number_view key='min_variable_price' label='minimum variable price' icon='online-request' tooltip='baseline price' direct=true
-    div
-    +boolean_view key='negotiable_price' label='negotiable price' icon='collaboration' tooltip='allow people to make bids' direct=true
-    div
-    +number_view key='retail_value' label='original retail value' icon='estimate' unit='$' tooltip='general info, helpful to renters to decide, also for price recommendations, and sorting' direct=true
-    .ui.header 
-        +i name='online-payment-'
-        |payment options
-    +boolean_view key='cash_accepted' label='cash accepted' icon='cash' direct=true
-    +boolean_view key='venmo_accepted' label='venmo accepted' icon='venmo' direct=true
-    +boolean_view key='prepay' label='prepayment required' icon='pay-wall' direct=true
-    +boolean_view key='security_deposit_required' label='security deposit required' icon='card-security' direct=true
-    if security_deposit_required
-        +number_view key='security_deposit_amount' label='security deposit amount' icon='card-security' direct=true
-    div
-    +boolean_view key='friend_discount' label='friend discount' icon='friends--v2' direct=true
-    if friend_discount
-        +number_view key='friend_discount_amount' label='security deposit amount' icon='dollar' direct=true
-        
-    .ui.small.header total earnings
-    .ui.small.header upcoming earnings
-    .ui.small.header initial cost
-    .ui.small.header maintenance costs/payments
-
-
-
-
-
 template(name='rental_status')
     if available 
         .ui.green.label available
@@ -176,3 +88,70 @@ template(name='reserve_button')
         .ui.inverted.header 
             |reserve
             +i name='play' classes='ui inline mini image'
+
+template(name='rental_card_template')
+    .ui.fluid.segment.stackable.grid
+        .row
+            .sixteen.wide.column
+                a.ui.inline.header(href="/rental/#{_id}/view") #{title} 
+                    if hourly_dollars
+                        .ui.basic.label $#{hourly_dollars}/hr
+                    if daily_dollars
+                        .ui.basic.label $#{daily_dollars}/day
+                +rental_status
+        .row
+            .four.wide.column
+                if image
+                    a.zoom(href="/rental/#{_id}/view")
+                        +image_view key='image' direct=true classes='zoom'
+            .twelve.wide.column
+                span(title='views')
+                    +ismall name='eye'
+                    |#{views}
+                div
+                +ismall name='marker'
+                each location_tags
+                    .ui.basic.label #{this}
+                div
+                +ismall name='tags'
+                each tags
+                    .ui.basic.label #{this}
+                +single_user_view key='resident' label='resident' direct=true
+                div
+                +user_list_toggle key='bookmark_ids' add_icon='bookmark outline' remove_icon='bookmark' add_label='bookmark' remove_label='unbookmark'  big=true
+                +voting
+                div
+                if currentUser
+                    if can_edit
+                        a.ui.button(href="/rental/#{_id}/edit/info")
+                            i.pencil.icon
+                            |edit
+                a.ui.button(href="/rental/#{_id}/view")
+                    |view
+                    i.right.chevron.icon
+                +author_info
+                +reserve_button
+
+
+template(name='rental_view_reservations')
+    .ui.grey.header 
+        +i name='clock'
+        |reservations
+    .ui.bulleted.link.list
+        each reservations
+            +reservation_list_item
+
+
+
+template(name='reservation_list_item')
+    .ui.segment
+        a.ui.header.inline.lowercase(href="/reservation/#{_id}/view")
+            small from 
+            |{{cal_time start_datetime}}
+            small to 
+            |{{cal_time end_datetime}}
+        .ui.inline.grey.header #{hour_duration} hrs
+        .ui.small.header #{when} by #{_author_username}
+        a.ui.large.fluid.button(href="/reservation/#{_id}/view")
+            |view
+            i.right.chevron.icon
