--- a/client/styles.css
+++ b/client/styles.css
@@ -3,9 +3,9 @@ body {
     font-family: 'Ubuntu', sans-serif !important;
     /* font-size: 110% !important; */
     /*line-height: 200% !important;*/
-    background: rgba(0,0,0,.9) !important;
-    filter: invert(.9) !important;
-    /* background: rgba(200, 200, 200, .1) !important */
+    /* background: rgba(0,0,0,.9) !important; */
+    /* filter: invert(.9) !important; */
+    background: rgba(200, 200, 200, .1) !important
     /* background: #0e0e44 !important; */
 }
 
