--- a/components/rentals/rental_view.jade
+++ b/components/rentals/rental_view.jade
@@ -22,14 +22,11 @@ template(name='rental_view')
                         +user_card
                     +array_view key='tags' icon='tags' direct=true title='tags'
                     +array_view key='location_tags' icon='marker' direct=true title='location tags'
-                    //- +text_view key='location' icon='marker' label='location description' direct=true
+                    +text_view key='location' icon='marker' label='location description' direct=true
                     div
                     .ui.header 
                         |retail $
                         |#{retail_value}
-                    //- +boolean_view key='security_deposit_required' label='security deposit required' icon='card-security' direct=true
-                    //- if security_deposit_required
-                    //-     +number_view key='security_deposit_amount' label='security deposit amount' icon='card-security' direct=true
                 .column
                     .ui.inline.header 
                         |$#{hourly_dollars}
@@ -89,6 +86,8 @@ template(name='reserve_button')
             |reserve
             +i name='play' classes='ui inline mini image'
 
+
+
 template(name='rental_card_template')
     .ui.fluid.segment.stackable.grid
         .row
@@ -105,6 +104,9 @@ template(name='rental_card_template')
                     a.zoom(href="/rental/#{_id}/view")
                         +image_view key='image' direct=true classes='zoom'
             .twelve.wide.column
+                .ui.header credit earned
+                .ui.header # of reservations
+                .ui.header average rental time
                 span(title='views')
                     +ismall name='eye'
                     |#{views}
